--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:id="@+id/linearlayout">
 
     <Switch
         android:layout_width="wrap_content"
