--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="74dp">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/txtName"
+            android:id="@+id/etxtName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Name"
@@ -34,7 +34,7 @@
         android:layout_marginTop="12dp">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/txtCity"
+            android:id="@+id/etxtCity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter City"
@@ -72,12 +72,14 @@
 
         />
     <TextView
+        android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
         android:layout_gravity="center_horizontal"
         android:textSize="24sp"/>
     <TextView
+        android:id="@+id/txtCity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="City"
