--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/switchbtn"
-        android:text="Turn On"/>
+        android:text="Turn On"
+       />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="368dp"
